# botdevice

./: Cargo.toml  README.md  tauri.conf.json
.forgejo/workflows/: botdevice.yaml
src/: lib.rs
