[package]
name = "botdevice"
version = "1.0.0"
edition = "2021"
description = "BotDevice - Android, HarmonyOS & IoT powered by General Bots"
license = "AGPL-3.0"
repository = "https://github.com/GeneralBots/BotServer"
keywords = ["bot", "mobile", "android", "iot", "tauri"]
categories = ["gui", "embedded"]

[lib]
name = "botdevice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Core from botlib
botlib = { path = "../botlib", features = ["http-client"] }

# Tauri with mobile features
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-geolocation = "2"

# Common
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
android_logger = "0.14"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
